<resources>
    <string name="app_name">Engineer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_login">Вход</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Вход</string>

    <string name="error_login_failed">Вход не выполнен! Попробуйте повторить чуть позже.</string>
    <string name="error_invalid_login">Не верный логин</string>
    <string name="error_invalid_email">Не правильный формат email</string>
    <string name="error_invalid_password">Введите пароль</string>
    <string name="error_incorrect_password">Не верный пароль</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_no_data">Нет данных</string>
    <string name="error_no_filter_data">Информация о фильтрах не найдена</string>
    <string name="prompt_pin">ПИН код (4 цифры)</string>
    <string name="action_save">Сохранить</string>
    <string name="register_helptext">Для входа в систему введите доменный логин с учетом регистра и пароль</string>
    <string name="register_pin_helptext">При следующем входе потребуется только ПИН код</string>
    <string name="menu_push_settings">Настройки оповещений</string>
    <string name="menu_settings_send_push">Получать push оповещения</string>
    <string name="menu_settings_change_pin">Смена ПИН кода</string>
    <string name="menu_settings_registration">Смена логина / пароля</string>
    <string name="menu_login_settings">Параметры входа</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">Mobile Engineer</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
